# jiracli-rust

./: Cargo.toml  README.md  install.sh
.github/workflows/: rust.yml  test.yaml
hooks/: pre-commit  pre-push
src/: app_config.rs  http.rs  main.rs  web.rs
