[package]
name = "myrust"
version = "0.1.0"
authors = ["Kang Hyojun <iam.kanghyojun@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = { version = "2.0.2" }
async-trait = "0.1.36"
