[package]
name = "myrust"
version = "0.1.0"
authors = ["Kang Hyojun <iam.kanghyojun@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.31"
async-trait = "0.1.36"
dirs = { version = "2.0.2" }
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
structopt = { version = "0.3" }
warp = "0.2"
